[WIP] Code cleaning.